# image-queue-processor

./: .dockerignore  Dockerfile.flask  Dockerfile.node  README.md  docker-compose.yml
cpp/: CMakeLists.txt  processor.cpp
flask/: app.py  database.py
flask/database/: processing_history.db
flask/templates/: completed.html  done.html  failed.html  history.html  index.html  status.html
monitoring/: prometheus.yml
node/: bull-config.js  consumer.js  index.js  package-lock.json  package.json  producer.js  test-processor.js
prometheus/: prometheus.yml
scripts/: fix_monitoring.sh  run_all.sh
