cmake_minimum_required(VERSION 3.15)
project(processor)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
set(OpenCV_DIR "/opt/homebrew/opt/opencv/lib/cmake/opencv4")
find_package(OpenCV REQUIRED)
add_executable(processor processor.cpp)
target_include_directories(processor PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(processor PRIVATE ${OpenCV_LIBS})